# android

artech/Arcam/: READEME.md  build.gradle
artech/Arcam/app/: build.gradle
artech/Arcam/libvlc/: build.gradle
artech/CountDown/: READEME.md
artech/CountDown/app/: build.gradle
artech/Fivics/: READEME.md  build.gradle  gradle.properties  settings.gradle
artech/Fivics/app/: build.gradle
artech/Fivics/libvlc/: AndroidManifest.xml
artech/Fivics/openCVLibrary330/: build.gradle
artech/Manager/app/: build.gradle  proguard-rules.pro
artech/Rangking/app/: build.gradle
artech/Semi/: READEME.md  build.gradle  gradle.properties
artech/Semi/app/: build.gradle  google-services.json
standing_egg/Archery_Wearable_Band/: READEME.md
standing_egg/Archery_Wearable_Band/app/: build.gradle
standing_egg/Gait_BLE/: READEME.md  import-summary.txt
standing_egg/Gait_BLE/app/: build.gradle
standing_egg/Idt/: READEME.md
standing_egg/Idt/app/: build.gradle
standing_egg/LAM_Wearable_Band/: .classpath  .project  AndroidManifest.xml  READEME.md  google-services.json
standing_egg/SE_Wearable_Band/: READEME.md  import-summary.txt
standing_egg/SE_Wearable_Band/app/: build.gradle
standing_egg/SensorDemo/: READEME.md
standing_egg/Sga100_3DCube/: .project
standing_egg/Sga100_chat/: .classpath  .project
standing_egg/SpinRemote/: build.gradle
standing_egg/VR360_Player_BLE/: README.md
standing_egg/Vivo/app/src/main/cpp/: CMakeLists.txt  Parameters.h  hello-jni.c  motionDetection.c  motionFramework.h  peakCounter.h  semoApi.h  sglib.h
(+1659 files in other folders)
